# actions-mkdocs

./: .mergify.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  THIRD-PARTY-NOTICES.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt
.chglog/: config.yml
.github/: dependabot.yml
.github/scripts/: update_changelog.sh
.github/workflows/: check-release-condition.yml  release-candidate.yaml  test.yaml  version-tag.yml
