[tool.poetry]
name = "mkdocs-actions"
version = "0.20.0"
description = ""
authors = ["Daisuke Sato <tiryoh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
# main
mkdocs = "^1.3"
# themes
mkdocs-material = "8.5.10"
mkdocs-rtd-dropdown = "1.0.2"
mkdocs-gitbook = "0.0.1"
mkdocs-ivory = "0.4.6"
# plugins
mkdocs-minify-plugin = "^0.5"
mkdocs-redirects = "^1.2"
mkdocs-git-revision-date-localized-plugin = "^1.1"
mkdocs-htmlproofer-plugin = "^0.10.2"
mkdocs_latest_release_plugin = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
